--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,10 @@
     <string name="app_name">ClockAlarm</string>
 
     <string-array name="Timer">
-        <item>15 min</item>
-        <item>30 min</item>
-        <item>45 min</item>
-        <item>60 min</item>
+        <item>1</item>
+        <item>15</item>
+        <item>45</item>
+        <item>60</item>
 
     </string-array>
 </resources>
